# hentdatafraYr

.github/workflows/: ci.yml
weather-etl/: .env  .env copy.example  Makefile  README.md  pyproject.toml
weather-etl/docker/: Dockerfile  docker-compose.yml
weather-etl/infra/bicep/: main.bicep
weather-etl/infra/bicep/modules/: containerapp-job.bicep  sql.bicep
weather-etl/src/weather_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
weather-etl/src/weather_ingest/: config.py  db.py  main.py  met_client.py  models.py  transform.py
weather-etl/tests/: test_smoke.py
