[project]
name = "weather-etl"
version = "0.1.0"
description = "Simple weather ETL: MET Locationforecast -> Azure SQL"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "backoff>=2.2",
  "pydantic>=2",
  "SQLAlchemy>=2.0",
  "pyodbc>=5.1",
  "python-dotenv>=1.0",
  "apscheduler>=3.10",
  "azure-identity>=1.17"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]
